--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ h4 {
 	padding:0 0 32px 0;
 	text-transform:uppercase;
 	font-family: 'PT Sans', sans-serif;
-	font-size: 87px;
+	// font-size: 87px;
 	line-height: 55px;
 	color:#343434;
 	font-weight: 400;
@@ -970,6 +970,10 @@ a.serv_block p {
     {
         right: 10px!important;
         top: 10px!important;
+    }
+    .table_small
+    {
+    	overflow: scroll;
     }
 }
 
