Изменения по ценам на 2017 год

--- a/css/style.css
+++ b/css/style.css
@@ -796,11 +796,11 @@ ul.foot_block_intouch {
   margin: 0;
 }
 .table_price td, .table_price th {
-  padding: 10px;
+  padding: 14px;
 }
 .table_price th {
   text-align: left;
-  font-size: 18px;
+  font-size: 14px;
 }
 .table_price tr:nth-child(2n) {
   background: #E5E5E5;
@@ -808,18 +808,18 @@ ul.foot_block_intouch {
 .table_price td:last-of-type {
   text-align: center;
 }
-.table_price a {
-  display: inline-block;
-  padding: 5px 10px;
-  background: #F79361;
-  box-shadow: 2px 2px 0 0 #a22800;
-  position: relative;
-}
-.table_price a:hover {
-  box-shadow: none;
-  top: 2px;
-  left: 2px;
-}
+// .table_price a {
+//   display: inline-block;
+//   padding: 5px 10px;
+//   background: #F79361;
+//   box-shadow: 2px 2px 0 0 #a22800;
+//   position: relative;
+// }
+// .table_price a:hover {
+//   box-shadow: none;
+//   top: 2px;
+//   left: 2px;
+// }
 
 
 /* ____________________________________ Slide 20 ____________________________________ */
